Fix z-index: mobile views don't header dropdowns anymore

--- a/modules/users/client/less/profile.less
+++ b/modules/users/client/less/profile.less
@@ -6,7 +6,7 @@
   border-radius: 0;
   &.navbar-fixed-top {
     top: @navbar-height;
-    z-index: (@zindex-navbar-fixed - 1); // Ensures this navbar won't cover header's drop menu
+    z-index: @zindex-navbar-fixed;
   }
   .container {
     width: 100%;
